[gd_scene load_steps=7 format=3 uid="uid://dbeuw38iexnj7"]

[ext_resource type="Script" path="res://scenes/map/sublocations_menu.gd" id="1_8ivc8"]
[ext_resource type="Texture2D" uid="uid://cg36qjs84adxa" path="res://Objects/Map/SublocationMenu.png" id="1_k46i0"]
[ext_resource type="Texture2D" uid="uid://d2csslr53lxxr" path="res://Objects/Map/Profile.png" id="2_0vadw"]
[ext_resource type="Texture2D" uid="uid://cff05swlubitl" path="res://Objects/Map/sublocation.png" id="3_2d8pb"]

[sub_resource type="LabelSettings" id="LabelSettings_rgw27"]
font_size = 40
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2jopv"]
font_size = 40
font_color = Color(0.000113828, 0.000113828, 0.000113828, 1)

[node name="SublocationsMenu" type="CanvasLayer"]
script = ExtResource("1_8ivc8")

[node name="Panel" type="Panel" parent="."]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 318.0
offset_top = 238.0
offset_right = -254.0
offset_bottom = -236.0

[node name="SublocationMenu" type="Sprite2D" parent="Panel"]
position = Vector2(662, 348)
texture = ExtResource("1_k46i0")

[node name="Profile" type="Sprite2D" parent="Panel/SublocationMenu"]
position = Vector2(-502, -207)
texture = ExtResource("2_0vadw")

[node name="Profile2" type="Sprite2D" parent="Panel/SublocationMenu"]
position = Vector2(-502, 0)
texture = ExtResource("2_0vadw")

[node name="Profile3" type="Sprite2D" parent="Panel/SublocationMenu"]
position = Vector2(-506, 200)
texture = ExtResource("2_0vadw")

[node name="sublocation1" type="TextureButton" parent="Panel/SublocationMenu"]
anchors_preset = -1
anchor_left = 0.345
anchor_top = 0.204
anchor_right = 0.79
anchor_bottom = 0.334
offset_left = -1549.4
offset_top = -939.32
offset_right = -483.8
offset_bottom = 0.279968
action_mode = 0
texture_normal = ExtResource("3_2d8pb")

[node name="Title" type="Label" parent="Panel/SublocationMenu/sublocation1"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.063
anchor_bottom = 0.086
offset_left = 585.0
offset_top = 399.0
offset_right = 1323.04
offset_bottom = 369.12
label_settings = SubResource("LabelSettings_rgw27")
horizontal_alignment = 1

[node name="ResourceRange" type="Label" parent="Panel/SublocationMenu/sublocation1"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.063
anchor_bottom = 0.086
offset_left = 583.0
offset_top = 465.0
offset_right = 1324.04
offset_bottom = 435.12
label_settings = SubResource("LabelSettings_2jopv")
horizontal_alignment = 1

[node name="sublocation2" type="TextureButton" parent="Panel/SublocationMenu"]
offset_left = -888.0
offset_top = -515.0
offset_right = 1032.0
offset_bottom = 565.0
texture_normal = ExtResource("3_2d8pb")

[node name="Title" type="Label" parent="Panel/SublocationMenu/sublocation2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.063
anchor_bottom = 0.086
offset_left = 585.0
offset_top = 399.0
offset_right = 1323.04
offset_bottom = 369.12
label_settings = SubResource("LabelSettings_rgw27")
horizontal_alignment = 1

[node name="ResourceRange" type="Label" parent="Panel/SublocationMenu/sublocation2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.063
anchor_bottom = 0.086
offset_left = 583.0
offset_top = 465.0
offset_right = 1324.04
offset_bottom = 435.12
label_settings = SubResource("LabelSettings_2jopv")
horizontal_alignment = 1

[node name="sublocation3" type="TextureButton" parent="Panel/SublocationMenu"]
offset_left = -888.0
offset_top = -322.0
offset_right = 1032.0
offset_bottom = 758.0
texture_normal = ExtResource("3_2d8pb")

[node name="Title" type="Label" parent="Panel/SublocationMenu/sublocation3"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.063
anchor_bottom = 0.086
offset_left = 585.0
offset_top = 399.0
offset_right = 1323.04
offset_bottom = 369.12
label_settings = SubResource("LabelSettings_rgw27")
horizontal_alignment = 1

[node name="ResourceRange" type="Label" parent="Panel/SublocationMenu/sublocation3"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.063
anchor_bottom = 0.086
offset_left = 583.0
offset_top = 465.0
offset_right = 1324.04
offset_bottom = 435.12
label_settings = SubResource("LabelSettings_2jopv")
horizontal_alignment = 1

[node name="Close" type="Button" parent="."]
offset_left = 873.0
offset_top = 862.0
offset_right = 1187.0
offset_bottom = 960.0
text = "CLOSE
"

[connection signal="pressed" from="Panel/SublocationMenu/sublocation1" to="." method="_on_sublocation_1_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
